--- a/custom.css
+++ b/custom.css
@@ -51,3 +51,7 @@ body{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-style: italic;
 }
+.ef {
+    display:flex;
+    padding:15px;
+}
